# backend/src/main/java/andrearepellini/phonebook/dto/request/VerifyUserRequest.java
@@ -1,0 +1,17 @@
+package andrearepellini.phonebook.dto.request;
+
+import jakarta.validation.constraints.Email;
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.Pattern;
+import lombok.Data;
+
+@Data
+public class VerifyUserRequest {
+    @NotBlank(message = "Email is required")
+    @Email(message = "Invalid email format")
+    private String email;
+
+    @NotBlank(message = "Verification code is required")
+    @Pattern(regexp = "\\d{6}", message = "Verification code must be 6 digits")
+    private String verificationCode;
+}
